Odds Page (Wrap-up 1)

--- a/stake.html
+++ b/stake.html
@@ -1102,6 +1102,108 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="footer align-center">
+                    <div class="footer-container">
+                        <div class="footer-container-wrapper">
+                            <div class="footer-section1">
+                                <div class="footer-menu">
+                                    <div class="fm-header">Sports</div>
+                                    <div class="fm-body">
+                                        <div class="fmb-item align-center">Home</div>
+                                        <div class="fmb-item align-center">Live</div>
+                                        <div class="fmb-item align-center">Sport Rules</div>
+                                    </div>
+                                </div>
+                                <div class="footer-menu">
+                                    <div class="fm-header">Casino</div>
+                                    <div class="fm-body">
+                                        <div class="fmb-item align-center">Games</div>
+                                        <div class="fmb-item align-center">VIP Club</div>
+                                        <div class="fmb-item align-center">Promotions</div>
+                                    </div>
+                                </div>
+                                <div class="footer-menu">
+                                    <div class="fm-header">Support</div>
+                                    <div class="fm-body">
+                                        <div class="fmb-item align-center">Fairness</div>
+                                        <div class="fmb-item align-center">Affiliate</div>
+                                        <div class="fmb-item align-center">Gamble Aware <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Live Support</div>
+                                        <div class="fmb-item align-center">Help Center <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                    </div>
+                                </div>
+                                <div class="footer-menu">
+                                    <div class="fm-header">Community</div>
+                                    <div class="fm-body">
+                                        <div class="fmb-item align-center">Blog</div>
+                                        <div class="fmb-item align-center">Forum <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Facebook <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Twitter <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Instagram <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Youtube <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Shop <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                    </div>
+                                </div>
+                                <div class="footer-menu">
+                                    <div class="fm-header">About Us</div>
+                                    <div class="fm-body">
+                                        <div class="fmb-item align-center">Privacy Policy</div>
+                                        <div class="fmb-item align-center">Licenses</div>
+                                        <div class="fmb-item align-center">AML Policy</div>
+                                        <div class="fmb-item align-center">Terms of Service</div>
+                                        <div class="fmb-item align-center">Self Exclusion</div>
+                                        <div class="fmb-item align-center">Primedice <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="footer-line"></div>
+
+                            <div class="footer-section2">
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Litecoin logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Bitcoin logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Ethereum logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Tron logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Ripple logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Doge coin logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Bitcoin Cash logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Tether logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Gamble Safe.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\18+ logo.svg" alt=""></div>
+                            </div>
+                            <div class="footer-line"></div>
+
+                            <div class="footer-section3">
+                                <div class="main-partners verified-op"><img src="Gallery\footer-gallery\stake-crypto-gambling-foundation.svg" alt=""></div>
+                                <div class="main-partners"><img src="Gallery\footer-gallery\Everton main partner.svg" alt=""></div>
+                                <div class="main-partners"><img src="Gallery\footer-gallery\Watford main partner.svg" alt=""></div>
+                                <div class="main-partners"><img src="Gallery\footer-gallery\UFC logo.svg" alt=""></div>
+                            </div>
+                            <div class="footer-line"></div>
+
+                            <div class="footer-section4">
+                                <div class="section4-part1">
+                                    <div class="stake-footer-icon"><img src="Gallery\footer-gallery\Stake logo footer.svg" alt=""></div>
+                                    <div class="part1-text">© 2023 Stake.com | All Rights Reserved.</div>
+                                    <div class="part1-text">1 BCH = $131.61</div>
+                                </div>
+
+                                <div class="section4-part2">
+                                    Stake is owned and operated by Medium Rare N.V., registration number: 145353, registered address: Fransche Bloemweg, 4 Willemstad Curaçao.
+                                    Contact us at support@stake.com. 
+                                    Payment agent company is Medium Rare Limited with address 7-9 Riga Feraiou, LIZANTIA COURT, Office 310,
+                                    Agioi Omologites, 1087 Nicosia, Cyprus and Registration number:
+                                    HE 410775 Stake is authorized and regulated by the Government of Curacao and operates under License No. 8048/JAZ issued to Antillephone.
+                                    Stake has passed all compliance and is legally authorized to conduct gaming operations for all games of chance and wagering.
+                                </div>
+
+                                <div class="section4-part3">
+                                    Support <span>support@stake.com</span> | Partners <span>partners@stake.com</span> | <span>Press press@stake.com</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
