Added Cursor: Pointer to key Elements

--- a/stake.html
+++ b/stake.html
@@ -200,7 +200,7 @@
     <div class="odds-page">
         <div class="fixed-top display-flex-center">
             <div class="center-ft display-flex-btw">
-                <div class="stake-logo cursor">
+                <div class="stake-logo">
                     <img src="Gallery\gallery2\stake-logo.svg" alt="">
                 </div>
     
@@ -240,7 +240,7 @@
                 </div>
     
                 <div class="ft-extra display-flex-btw">
-                    <div class="ft-search cursor align-center"><img src="Gallery\gallery2\search.svg" alt="">Search</div>
+                    <div class="ft-search align-center"><img src="Gallery\gallery2\search.svg" alt="">Search</div>
                     <img src="Gallery\gallery2\profile.svg" alt="" class="cursor">
                     <div class="chat">
                         <div class="chat-icon cursor"><img src="Gallery\gallery2\message.svg" alt=""></div>
@@ -258,9 +258,9 @@
                 <div class="bs-container">
                     <div class="bs-top-menu">
                         <div class="bs-menu1">
-                            <div class="tm-exit display-flex-center cursor"><i class="fa-solid fa-chevron-left"></i></div>
+                            <div class="tm-exit display-flex-center"><i class="fa-solid fa-chevron-left"></i></div>
                             <div class="tm-display">
-                                <div class="tm-option tm-soccer display-flex-center cursor">Soccer</div>
+                                <div class="tm-option tm-soccer display-flex-center">Soccer</div>
                                 <div class="tm-option tm-england display-flex-center">England</div>
                             </div>
                         </div>
@@ -1287,7 +1287,7 @@
                     <div class="match-card hidden">
                         <div class="match-header display-flex-center">
                             <div class="mh-wrapper display-flex-btw">
-                                <div class="mh-title cursor">Manchester City FC - Chelsea FC</div>
+                                <div class="mh-title">Manchester City FC - Chelsea FC</div>
                                 <div class="mh-cancel cursor"><img src="Gallery\gallery2\collapse-bl.svg" alt=""></div>
                             </div>
                         </div>
