--- a/stake.html
+++ b/stake.html
@@ -1028,70 +1028,70 @@
 
                                 <tbody>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> <span>WOL - LFC</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:30 PM</td>
                                         <td class="mc-odd">2.40</td>
                                         <td class="mc-bet"><span class="align-center">$8,245.99 <img src="Gallery\crypto-gallery\usdt.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery2\multi.svg" alt=""> Multi (3)</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery2\multi.svg" alt=""> <span>Multi (3)</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:30 PM</td>
                                         <td class="mc-odd">6.90</td>
                                         <td class="mc-bet"><span class="align-center">$1,045.92 <img src="Gallery\crypto-gallery\matic.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> Crystal Palace FC - Leeds United</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> <span>Crystal Palace FC - Leeds United</span></span></td>
                                         <td class="mc-user known-user"><span>adam</span></td>
                                         <td class="mc-time">8:20 PM</td>
                                         <td class="mc-odd">3.40</td>
                                         <td class="mc-bet"><span class="align-center">$3,098.22 <img src="Gallery\crypto-gallery\btc.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\ice-hockey.svg" alt=""> Rogle BK - Malmo IF</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\ice-hockey.svg" alt=""> <span>Rogle BK - Malmo IF</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:20 PM</td>
                                         <td class="mc-odd">1.48</td>
                                         <td class="mc-bet"><span class="align-center">$1,479.82 <img src="Gallery\crypto-gallery\matic.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\basketball.svg" alt=""> GSW - LA Lakers</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\basketball.svg" alt=""> <span>GSW - LA Lakers</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:15 PM</td>
                                         <td class="mc-odd">2.90</td>
                                         <td class="mc-bet"><span class="align-center">$6,786.10 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery2\multi.svg" alt=""> Multi (2)</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery2\multi.svg" alt=""> <span>Multi (2)</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:05 PM</td>
                                         <td class="mc-odd">3.34</td>
                                         <td class="mc-bet"><span class="align-center">$18,200.33 <img src="Gallery\crypto-gallery\btc.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> PSV Eindhoven - Vitesse Arnhem</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> <span>PSV Eindhoven - Vitesse Arnhem</span></span></td>
                                         <td class="mc-user known-user"><span>Hakeem</span></td>
                                         <td class="mc-time">8:05 PM</td>
                                         <td class="mc-odd">1.38</td>
                                         <td class="mc-bet"><span class="align-center">$5,000.30 <img src="Gallery\crypto-gallery\bch.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\basketball.svg" alt=""> George Washington Colonials - Dayton Flyers</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\basketball.svg" alt=""> <span>George Washington Colonials - Dayton Flyers</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:05 PM</td>
                                         <td class="mc-odd">2.37</td>
                                         <td class="mc-bet"><span class="align-center">$1,345.76 <img src="Gallery\crypto-gallery\bch.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\american-football.svg" alt=""> AO Markopoulou - AO Ilisiakos</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\american-football.svg" alt=""> <span>AO Markopoulou - AO Ilisiakos</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:00 PM</td>
                                         <td class="mc-odd">4.21</td>
                                         <td class="mc-bet"><span class="align-center">$2,020.33 <img src="Gallery\crypto-gallery\uni.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery2\multi.svg" alt=""> Multi (4)</span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery2\multi.svg" alt=""> <span>Multi (4)</span> </span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:00 PM</td>
                                         <td class="mc-odd">16.89</td>
