View Open Bets Popup

--- a/stake.html
+++ b/stake.html
@@ -1128,21 +1128,21 @@
                                     <div class="fm-body">
                                         <div class="fmb-item align-center">Fairness</div>
                                         <div class="fmb-item align-center">Affiliate</div>
-                                        <div class="fmb-item align-center">Gamble Aware <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Gamble Aware <img src="Gallery\gallery3\footer-menu-img.svg" alt=""></div>
                                         <div class="fmb-item align-center">Live Support</div>
-                                        <div class="fmb-item align-center">Help Center <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Help Center <img src="Gallery\gallery3\footer-menu-img.svg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="footer-menu">
                                     <div class="fm-header">Community</div>
                                     <div class="fm-body">
                                         <div class="fmb-item align-center">Blog</div>
-                                        <div class="fmb-item align-center">Forum <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
-                                        <div class="fmb-item align-center">Facebook <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
-                                        <div class="fmb-item align-center">Twitter <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
-                                        <div class="fmb-item align-center">Instagram <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
-                                        <div class="fmb-item align-center">Youtube <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
-                                        <div class="fmb-item align-center">Shop <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Forum <img src="Gallery\gallery3\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Facebook <img src="Gallery\gallery3\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Twitter <img src="Gallery\gallery3\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Instagram <img src="Gallery\gallery3\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Youtube <img src="Gallery\gallery3\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Shop <img src="Gallery\gallery3\footer-menu-img.svg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="footer-menu">
@@ -1153,37 +1153,37 @@
                                         <div class="fmb-item align-center">AML Policy</div>
                                         <div class="fmb-item align-center">Terms of Service</div>
                                         <div class="fmb-item align-center">Self Exclusion</div>
-                                        <div class="fmb-item align-center">Primedice <img src="Gallery\footer-gallery\footer-menu-img.svg" alt=""></div>
+                                        <div class="fmb-item align-center">Primedice <img src="Gallery\gallery3\footer-menu-img.svg" alt=""></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="footer-line"></div>
 
                             <div class="footer-section2">
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Litecoin logo.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Bitcoin logo.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Ethereum logo.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Tron logo.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Ripple logo.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Doge coin logo.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Bitcoin Cash logo.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Tether logo.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\Gamble Safe.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery\footer-gallery\18+ logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\Litecoin logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\Bitcoin logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\Ethereum logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\Tron logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\Ripple logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\Doge coin logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\Bitcoin Cash logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\Tether logo.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\Gamble Safe.svg" alt=""></div>
+                                <div class="fs2-item align-center"><img src="Gallery\gallery3\18+ logo.svg" alt=""></div>
                             </div>
                             <div class="footer-line"></div>
 
                             <div class="footer-section3">
-                                <div class="main-partners verified-op"><img src="Gallery\footer-gallery\stake-crypto-gambling-foundation.svg" alt=""></div>
-                                <div class="main-partners"><img src="Gallery\footer-gallery\Everton main partner.svg" alt=""></div>
-                                <div class="main-partners"><img src="Gallery\footer-gallery\Watford main partner.svg" alt=""></div>
-                                <div class="main-partners"><img src="Gallery\footer-gallery\UFC logo.svg" alt=""></div>
+                                <div class="main-partners verified-op"><img src="Gallery\gallery3\stake-crypto-gambling-foundation.svg" alt=""></div>
+                                <div class="main-partners"><img src="Gallery\gallery3\Everton main partner.svg" alt=""></div>
+                                <div class="main-partners"><img src="Gallery\gallery3\Watford main partner.svg" alt=""></div>
+                                <div class="main-partners"><img src="Gallery\gallery3\UFC logo.svg" alt=""></div>
                             </div>
                             <div class="footer-line"></div>
 
                             <div class="footer-section4">
                                 <div class="section4-part1">
-                                    <div class="stake-footer-icon"><img src="Gallery\footer-gallery\Stake logo footer.svg" alt=""></div>
+                                    <div class="stake-footer-icon"><img src="Gallery\gallery3\Stake logo footer.svg" alt=""></div>
                                     <div class="part1-text">© 2023 Stake.com | All Rights Reserved.</div>
                                     <div class="part1-text">1 BCH = $131.61</div>
                                 </div>
@@ -1236,7 +1236,7 @@
             </div>
 
             <div class="collapse-betslip">
-                <div class="cb-image display-flex-center"><img src="Gallery\gallery2\collapse-bl.svg" alt=""></div>
+                <div class="cb-image display-flex-center"><img src="Gallery\gallery2\cancel.svg" alt=""></div>
                 <div class="cb-hover">Collapse Betslip</div>
             </div>
         </div>
@@ -1358,6 +1358,87 @@
                     <div class="above-balance">You cannot bet more than your balance.</div>
                     <div class="multiple-selections">Multiple selections from some event cannot be combined into a Multibet.</div>
                     <button class="place-mbet">Place Multi Bet</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="view-open-bets">
+        <div class="popup-background"></div>
+        <div class="obe-container display-flex-center">
+            <div class="open-bet-event">
+                <div class="obe-header display-flex-btw">
+                    <div class="obe-icon align-center">
+                        <img src="Gallery\gallery3\bet.svg" alt="">
+                        <span>Bet</span>
+                    </div>
+                    <img src="Gallery\gallery2\cancel.svg" alt="">
+                </div>
+
+                <div class="obe-body">
+                    <div class="section1 display-flex-center">
+                        <div>Sports</div>
+                        <div class="align-center">ID 63,445,021 <img src="Gallery\gallery3\copy-chat.svg" alt=""> <img src="Gallery\gallery3\copy-online.svg" alt=""></div>
+                        <div class="align-center obe-color-ash">Placed by <img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</div>
+                        <div class="obe-color-ash">on 2/5/2023 at 7:40PM</div>
+                    </div>
+
+                    <div class="section2">
+                        <div class="booking-time align-center obe-color-ash">7:40PM 2/5/2023</div>
+
+                        <div class="obe-match-card-container">
+                            <div class="obe-match-card obe-mc-first">
+                                <div class="obe-mc-title align-center"><img src="Gallery\gallery1\soccer.svg" alt=""><span>FC Inter Milano - AC Milan</span></div>
+                                <div class="obe-mc-type obe-color-ash">Both Teams to Score</div>
+                                <div class="obe-mc-pick-odd display-flex-btw"><span>Yes</span> <span>1.94</span></div>
+                                <div class="obe-match-time display-flex-btw obe-color-ash">
+                                    <div class="time-left align-center">
+                                        <img src="Gallery\gallery3\count-down.svg" alt=""> 
+                                        <span>Starts in 10 Minutes</span>
+                                    </div>
+                                    <div class="align-center">
+                                        <img src="Gallery\gallery3\live-stream.svg" id="live-stream" alt="">
+                                        <img src="Gallery\gallery2\live-stats.svg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="obe-match-card obe-mc-next">
+                                <div class="obe-mc-title align-center"><img src="Gallery\gallery1\soccer.svg" alt=""><span>FC Barcelona - Sevilla FC</span></div>
+                                <div class="obe-mc-type obe-color-ash">1x2</div>
+                                <div class="obe-mc-pick-odd display-flex-btw"><span>FC Barcelona</span> <span>1.33</span></div>
+                                <div class="obe-match-time display-flex-btw obe-color-ash">
+                                    <div class="time-left align-center">
+                                        <img src="Gallery\gallery3\count-down.svg" alt=""> 
+                                        <span>Starts in 27 Minutes</span>
+                                    </div>
+                                    <div class="align-center">
+                                        <img src="Gallery\gallery3\live-stream.svg" id="live-stream" alt="">
+                                        <img src="Gallery\gallery2\live-stats.svg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="obe-mc-base">
+                            <div class="line-logo display-flex-btw"><span></span> <img src="Gallery\gallery2\stake-logo.svg" alt=""> <span></span></div>
+                            <div class="obe-totals">
+                                <div class="odds display-flex-btw">
+                                    <div class="obe-color-ash">Total Odds</div>
+                                    <div class="total-odds">2.46</div>
+                                </div>
+                                <div class="stake display-flex-btw">
+                                    <div class="obe-color-ash">Total Stake</div>
+                                    <div class="align-center"><span>$2,207.85</span> <img src="Gallery\crypto-gallery\matic.svg" alt=""></div>
+                                </div>
+                                <div class="payout display-flex-btw">
+                                    <div class="obe-color-ash">Est. Payout</div>
+                                    <div class="align-center"><span>$2,207.85</span> <img src="Gallery\crypto-gallery\matic.svg" alt=""></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="add-mc display-flex-center"><button>Add 2 bets to my Bet Slip</button></div>
+                    </div>
                 </div>
             </div>
         </div>
