--- a/stake.html
+++ b/stake.html
@@ -1363,6 +1363,7 @@
         </div>
     </div>
 
+    <!-- Popup shown when an Event in Open Bets Section is clicked -->
     <div class="view-open-bets">
         <div class="popup-background"></div>
         <div class="obe-container display-flex-center">
@@ -1438,6 +1439,22 @@
                         </div>
 
                         <div class="add-mc display-flex-center"><button>Add 2 bets to my Bet Slip</button></div>
+                    </div>
+                </div>
+
+                <div class="loading-animation display-flex-center">
+                    <div class="la-image-wrapper">
+                        <div class="la-minors display-flex-btw">
+                            <div class="la-img1 la-part1"><img src="Gallery\animation-gallery\bomb.svg" alt=""></div>
+                            <div class="la-img2 la-part1"><img src="Gallery\animation-gallery\football.svg" alt=""></div>
+                            <div class="la-img3 la-part1"><img src="Gallery\animation-gallery\heart.svg" alt=""></div>
+                        </div>
+
+                        <div class="la-majors display-flex-btw">
+                            <div class="la-img4 la-part2"><img src="Gallery\animation-gallery\nine.svg" alt=""></div>
+                            <div class="la-img5 la-part2"><img src="Gallery\animation-gallery\baseball.svg" alt=""></div>
+                            <div class="la-img6 la-part2"><img src="Gallery\animation-gallery\dice.svg" alt=""></div>
+                        </div>
                     </div>
                 </div>
             </div>
