Open Bets Section (Effects Complete)

--- a/stake.html
+++ b/stake.html
@@ -1373,7 +1373,7 @@
                         <img src="Gallery\gallery3\bet.svg" alt="">
                         <span>Bet</span>
                     </div>
-                    <img src="Gallery\gallery2\cancel.svg" alt="">
+                    <div class="close-open-bet"><img src="Gallery\gallery2\cancel.svg" alt=""></div>
                 </div>
 
                 <div class="obe-body">
