Open Bets Popup (Gets input once)

--- a/stake.html
+++ b/stake.html
@@ -1037,7 +1037,7 @@
                                     <tr class="">
                                         <td class="mc-event"><span class="align-center"><img src="Gallery\gallery2\multi.svg" alt=""> <span>Multi (2)</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
-                                        <td class="mc-time">8:05 PM</td>
+                                        <td class="mc-time">8:20 PM</td>
                                         <td class="mc-odd">3.34</td>
                                         <td class="mc-bet"><span class="align-center">$18,200.33 <img src="Gallery\crypto-gallery\btc.svg" alt=""></span></td>
                                     </tr>
@@ -1045,56 +1045,56 @@
                                         <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> <span>CRY - LEE</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:20 PM</td>
-                                        <td class="mc-odd">3.40</td>
+                                        <td class="mc-odd">1.90</td>
                                         <td class="mc-bet"><span class="align-center">$3,098.22 <img src="Gallery\crypto-gallery\btc.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
                                         <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> <span>BRI - TOT</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:20 PM</td>
-                                        <td class="mc-odd">1.48</td>
+                                        <td class="mc-odd">2.85</td>
                                         <td class="mc-bet"><span class="align-center">$1,479.82 <img src="Gallery\crypto-gallery\matic.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\basketball.svg" alt=""> <span>GSW - LA Lakers</span></span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\basketball.svg" alt=""> <span>GSW - LAL</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:15 PM</td>
-                                        <td class="mc-odd">2.90</td>
+                                        <td class="mc-odd">2.68</td>
                                         <td class="mc-bet"><span class="align-center">$6,786.10 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
                                         <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> <span>BAR - GIR</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
-                                        <td class="mc-time">8:30 PM</td>
-                                        <td class="mc-odd">6.90</td>
+                                        <td class="mc-time">8:15 PM</td>
+                                        <td class="mc-odd">1.30</td>
                                         <td class="mc-bet"><span class="align-center">$1,045.92 <img src="Gallery\crypto-gallery\matic.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
                                         <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> <span>PSV - VIT</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
-                                        <td class="mc-time">8:05 PM</td>
-                                        <td class="mc-odd">1.38</td>
+                                        <td class="mc-time">8:15 PM</td>
+                                        <td class="mc-odd">1.75</td>
                                         <td class="mc-bet"><span class="align-center">$5,000.30 <img src="Gallery\crypto-gallery\bch.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
-                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\basketball.svg" alt=""> <span>George Washington Colonials - Dayton Flyers</span></span></td>
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\basketball.svg" alt=""> <span>GWC - DAF</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
-                                        <td class="mc-time">8:05 PM</td>
-                                        <td class="mc-odd">2.37</td>
+                                        <td class="mc-time">8:15 PM</td>
+                                        <td class="mc-odd">3.10</td>
                                         <td class="mc-bet"><span class="align-center">$1,345.76 <img src="Gallery\crypto-gallery\bch.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
                                         <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> <span>PSG - CHE</span></span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:00 PM</td>
-                                        <td class="mc-odd">4.21</td>
+                                        <td class="mc-odd">1.55</td>
                                         <td class="mc-bet"><span class="align-center">$2,020.33 <img src="Gallery\crypto-gallery\uni.svg" alt=""></span></td>
                                     </tr>
                                     <tr class="">
                                         <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> <span>BAY - DOR</span> </span></td>
                                         <td class="mc-user"><span class="display-flex-center"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
                                         <td class="mc-time">8:00 PM</td>
-                                        <td class="mc-odd">2.40</td>
+                                        <td class="mc-odd">1.99</td>
                                         <td class="mc-bet"><span class="align-center">$3,045.92 <img src="Gallery\crypto-gallery\bnb.svg" alt=""></span></td>
                                     </tr>
                                 </tbody>
@@ -1386,9 +1386,9 @@
                 <div class="obe-body">
                     <div class="section1 display-flex-center">
                         <div>Sports</div>
-                        <div class="align-center">ID 63,445,021 <img src="Gallery\gallery3\copy-chat.svg" alt=""> <img src="Gallery\gallery3\copy-online.svg" alt=""></div>
+                        <div class="align-center obe-id">ID 63,445,021 <img src="Gallery\gallery3\copy-chat.svg" alt=""> <img src="Gallery\gallery3\copy-online.svg" alt=""></div>
                         <div class="align-center obe-color-ash">Placed by <img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</div>
-                        <div class="obe-color-ash">on 2/5/2023 at 7:40PM</div>
+                        <div class="obe-color-ash obe-date-time">on 2/5/2023 at 7:40PM</div>
                     </div>
 
                     <div class="section2">
@@ -1398,7 +1398,7 @@
                             <div class="obe-match-card obe-mc-first">
                                 <div class="obe-mc-title align-center"><img src="Gallery\gallery1\soccer.svg" alt=""><span>FC Inter Milano - AC Milan</span></div>
                                 <div class="obe-mc-type obe-color-ash">Both Teams to Score</div>
-                                <div class="obe-mc-pick-odd display-flex-btw"><span>Yes</span> <span>1.94</span></div>
+                                <div class="obe-mc-pick-odd display-flex-btw"><span class="pick">Yes</span> <span class="odd">1.94</span></div>
                                 <div class="obe-match-time display-flex-btw obe-color-ash">
                                     <div class="time-left align-center">
                                         <img src="Gallery\gallery3\count-down.svg" alt=""> 
@@ -1410,10 +1410,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="obe-match-card obe-mc-next">
+                            <div class="obe-match-card obe-mc-last">
                                 <div class="obe-mc-title align-center"><img src="Gallery\gallery1\soccer.svg" alt=""><span>FC Barcelona - Sevilla FC</span></div>
                                 <div class="obe-mc-type obe-color-ash">1x2</div>
-                                <div class="obe-mc-pick-odd display-flex-btw"><span>FC Barcelona</span> <span>1.33</span></div>
+                                <div class="obe-mc-pick-odd display-flex-btw"><span class="pick">FC Barcelona</span> <span class="odd">1.33</span></div>
                                 <div class="obe-match-time display-flex-btw obe-color-ash">
                                     <div class="time-left align-center">
                                         <img src="Gallery\gallery3\count-down.svg" alt=""> 
